2005-07-06 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCQuery.m: update -combine:.
    * Source/Index/LCSegmentInfos.m: update version.

2005-07-05 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    Minor update.

2005-07-04 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    Implement some optimization.

2005-07-02 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Index/LCSegmentTermEnum.m:
    Fix problem for long document.

2005-07-01 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Index/LCCompoundFileReader.m:
    Fix false warning.
    * Source/Search/TestQueryTermVector.m:
    Fix warning.
    * All test units should work now.

2005-06-23 Yen-Ju Chen <yjchenx at gmail _dot_ com>
    * Source/Search/LCBooleanQuery.m
    * Source/Search/LCQuery.m
    * Source/Store/LCStopAnalyzer.m:
    Update to lastest Apache Lucene.

2005-06-18 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Headers/Store/LCFSIndexInput.h
    * Headers/Store/LCFSIndexOutput.h
    * Source/Store/LCFSIndexInput.m
    * Source/Store/LCFSIndexOutput.m:
    Prevent close NSFileHandle twice.
    * Source/Document/LCDateTools.m:
    Remove unit test for millisecond.
    * Source/Index/TestTermInfos.m:
    Use UKTrue() instead of UKObjectsEqual().
    * Source/Index/GNUmakefile
    Disable failed tests for now.

2005-06-17  Quentin Mathe <qmathe@club-internet.fr>

    * Headers/Store/LCMMapDirectory.h:
    * Source/Store/LCMMapDirectory.m:
    Added MMapDirectory.java port (compile but not included in build process
    currently).

2005-06-14  Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile.postamble: Added.
    * GNUmakefile.preamble:
    Fixed in order to allow compilation with 'make test=yes' from parent
    directories when UnitKit isn't already installed, and to avoid symbolic
    links to UnitKit source directory replicated at each subproject level.

2005-06-07 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/LCSegmentMerger.m: 